-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.7, 6.8
-
-
882a4df4f (dev), e7dda25bd (6.10), fefe839d0 (6.9), 8546d1c39 (tqtc/lts-6.8)
QTreeView in Qt 6.5.7 causes issues with the auto-scrolling feature during a drag-and-drop event. This feature worked as expected in Qt 5.15.17 but fails in the later version.
Steps to Reproduce
- Build and run the attached project with Qt 5.15.17.
-
- Expected Behavior: When dragging a tree item to the bottom of the view, the tree begins to auto-scroll without interruption.
- Build and run the project with Qt 6.5.7.
-
- Observed Behavior: The tree begins to scroll but stutters and eventually stops. Moving the mouse pointer within the scroll area may cause temporary scrolling, but it does not auto-scroll consistently.
| For Gerrit Dashboard: QTBUG-130978 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 654910,1 | QAbstractItemView: fix autoscroll immediately stopping | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: NEW | +2 | 0 |
| 652803,4 | QAbstractItemView: fix autoscroll immediately stopping | dev | qt/qtbase | Status: MERGED | +2 | +1 |
| 654729,2 | QAbstractItemView: fix autoscroll immediately stopping | 6.10 | qt/qtbase | Status: MERGED | +2 | 0 |
| 654859,2 | QAbstractItemView: fix autoscroll immediately stopping | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
| 654895,2 | QAbstractItemView: fix autoscroll immediately stopping | tqtc/lts-6.8 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |