QAbstractItemView: fix autoscroll immediately stopping

Adjust the draggedPosition calculation to changes in
QAbstractItemViewPrivate::offset(). The draggedPosition was previously
first calculated by adding mouse pos and offset() value, and mouse pos
was later extracted by subtracting the offset() from draggedPosition.

However, the offset() value no longer remains a constant between the
addition and subtraction, which makes it impossible to get the old
mouse position.

Store the offset and mouse position separately to make the
calculations deterministic across events.

Fixes: QTBUG-130978
Pick-to: 6.9 6.8 6.5
Change-Id: I5c601ff7ca40c9d8fb7ad949ff15520d199f5c1f
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit 882a4df4fdd2a5952a605ca783142f46d9a92d5b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>